--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
             "email": "kyawminhein101@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "illuminate/database": "^8.83"
+    },
     "autoload": {
         "files": ["helpers.php"],
         "psr-4": {
-            "App\\": "src/App",
-            "Utils\\": "src/Utils"
+            "App\\": "src/"
         }    
     }
 }
