--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,11 @@
         }
     ],
     "require": {
-        "illuminate/database": "^8.83"
+        "illuminate/database": "^8.83",
+        "symfony/http-foundation": "^5.4",
+        "symfony/var-dumper": "^5.4"
     },
     "autoload": {
-        "files": ["helpers.php"],
         "psr-4": {
             "App\\": "src/"
         }    
