--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "symfony/var-dumper": "^5.4"
     },
     "autoload": {
+        "files": ["helpers.php"],
         "psr-4": {
             "App\\": "src/"
         }    
